[package]
name = "looper"
version = "1.0.0"
authors = ["Marek Rogalski <mafikpl@gmail.com>"]
description = "Clean abstraction for a single-threaded event loop. Built as a lightweight wrapper around the std::sync::mpsc package."
homepage = "https://github.com/mafik/looper"
repository = "https://github.com/mafik/looper.git"

keywords = ["looper", "loop", "event", "thread", "single"]
categories = ["concurrency", "rust-patterns", "network-programming", "asynchronous"]
license = "Apache-2.0"

[dependencies]

[badges]
appveyor = { repository = "https://github.com/mafik/looper.git" }
is-it-maintained-issue-resolution = { repository = "https://github.com/mafik/looper.git" }
is-it-maintained-open-issues = { repository = "https://github.com/mafik/looper.git" }
codecov = { repository = "https://github.com/mafik/looper.git" }
coveralls = { repository = "https://github.com/mafik/looper.git" }